# graphics-engine

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  TODO.md
include/: CMakeLists.txt
include/bauasian/: bauasian.cpp  bauasian.hpp  bauasian2d.hpp  bauasian3d.hpp  camera.cpp  camera.hpp  context_size_interface.cpp  context_size_interface.hpp  context_size_observer.cpp  context_size_observer.hpp  context_width_interface.cpp  context_width_interface.hpp  engine.cpp  engine.hpp  open_gl_extensions.cpp  open_gl_extensions.hpp
include/bauasian/buffers/: camera_buffer.cpp  camera_buffer.hpp  directional_light_buffer.cpp  directional_light_buffer.hpp  material_buffer.cpp  material_buffer.hpp  point_light_buffer.cpp  point_light_buffer.hpp  spot_light_buffer.cpp  uniform_buffer.cpp  uniform_buffer.hpp
include/bauasian/cameras/: camera.cpp  camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp
include/bauasian/exceptions/: file_not_found_exception.hpp  file_type_not_supported_exception.hpp  glsl_syntax_error_exception.hpp  initialization_failed_exception.hpp  light_limit_reached_exception.hpp  open_gl_version_too_low.hpp  shader_compile_exception.hpp  shader_link_exception.hpp  unknown_extension_exception.hpp  unknown_file_type_exception.hpp
include/bauasian/fonts/: font.cpp  font.hpp  font_factory.cpp  font_factory.hpp  font_loader.cpp  font_loader.hpp  glyph.cpp  glyph.hpp  text.cpp  text.hpp
include/bauasian/frame_buffers/: frame_buffer.cpp  frame_buffer.hpp  frame_buffer_attachment.cpp  frame_buffer_attachment.hpp  render_buffer.cpp  render_buffer.hpp
include/bauasian/glsl/: bindings.glsl  globals.glsl  locations.glsl
include/bauasian/interfaces/: context_size_interface.hpp  name_interface.cpp  name_interface.hpp  size_interface.cpp  size_interface.hpp
include/bauasian/lights/: directional_light.cpp  directional_light.hpp  light.cpp  light.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp
include/bauasian/materials/: basic_material.cpp  basic_material.hpp  cube_texture.cpp  cube_texture.hpp  image_loader.cpp  image_loader.hpp  image_slicer.cpp  image_slicer.hpp  material.cpp  material.hpp  texture.cpp  texture.hpp  texture_factory.cpp  texture_factory.hpp  texture_interface.cpp  texture_interface.hpp
include/bauasian/mixins/: name_mixin.cpp  name_mixin.hpp  shader_mixin.cpp  shader_mixin.hpp  size_mixin.cpp  size_mixin.hpp
include/bauasian/post_processors/: area_filter.cpp  area_filter.hpp  black_white_filter.cpp  black_white_filter.hpp  bloom.cpp  bloom.hpp  filter.cpp  filter.hpp  fxaa.cpp  fxaa.hpp  hdr.cpp  hdr.hpp  horizontal_gaussian_blur.cpp  horizontal_gaussian_blur.hpp  intensity_filter.cpp  intensity_filter.hpp  kernel_filter.cpp  kernel_filter.hpp  large_kernel_filter.cpp  large_kernel_filter.hpp  post_processor.hpp  ssao.cpp  ssao.hpp  ssao_blur.cpp  ssao_blur.hpp  ssao_filter.cpp  ssao_filter.hpp  vertical_gaussian_blur.cpp  vertical_gaussian_blur.hpp
include/bauasian/primitives/: box.cpp  box.hpp  circle.cpp  circle.hpp  cone_factory.cpp  cone_factory.hpp  cone_volume.cpp  cone_volume.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  rectangle.cpp  rectangle.hpp  scene_loader.cpp  scene_loader.hpp  screen_cube.cpp  screen_cube.hpp  screen_quad.cpp  screen_quad.hpp  sphere.cpp  sphere.hpp  sphere_factory.cpp  sphere_factory.hpp  sphere_volume.cpp  sphere_volume.hpp
include/bauasian/renderers/: deferred_renderer.cpp  deferred_renderer.hpp  frame_buffer.cpp  frame_buffer.hpp  frame_buffer_attachment.cpp  frame_buffer_attachment.hpp  render_buffer.cpp  render_buffer.hpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp  renderer_3d.cpp  renderer_3d.hpp  scene.cpp  scene.hpp  scene_2d.cpp  scene_2d.hpp  scene_3d.cpp  scene_3d.hpp  shadow_renderer.cpp  shadow_renderer.hpp
include/bauasian/scenes/: camera.cpp  camera.hpp  orthographic_camera.cpp  orthographic_camera.hpp  perspective_camera.cpp  perspective_camera.hpp  scene_3d.cpp  scene_3d.hpp  scene_loader.cpp  scene_loader.hpp  sky_box.cpp  sky_box.hpp  sun_sky_box.cpp  textured_sky_box.cpp  textured_sky_box.hpp
include/bauasian/shaders/: fragment_shader.cpp  fragment_shader.hpp  preprocessor.cpp  preprocessor.hpp  shader.cpp  shader.hpp  shader_program.cpp  shader_program.hpp  uniform_buffer.cpp  uniform_buffer.hpp  vertex_shader.cpp  vertex_shader.hpp
include/bauasian/sky/: sky_box.cpp  sky_box.hpp  sun_sky_box.cpp  sun_sky_box.hpp  textured_sky_box.cpp  textured_sky_box.hpp
include/bauasian/textures/: cube_texture.cpp  cube_texture.hpp  texture.cpp  texture.hpp  texture_factory.cpp  texture_factory.hpp
include/bauasian/uniform_buffers/: camera_buffer.cpp  camera_buffer.hpp  directional_light_buffer.cpp  directional_light_buffer.hpp  material_buffer.cpp  material_buffer.hpp  matrices_buffer.cpp  matrices_buffer.hpp  shadow_buffer.cpp  shadow_buffer.hpp  spot_light_buffer.cpp  spot_light_buffer.hpp  uniform_buffer.cpp  uniform_buffer.hpp
include/engine/: camera.cpp  camera.hpp  config.cpp  config.hpp  context_width_interface.cpp  context_width_interface.hpp  engine.cpp  engine.hpp  engine2d.hpp  engine3d.hpp
include/engine/exceptions/: file_not_found_exception.hpp  file_type_not_supported_exception.hpp  glsl_syntax_error_exception.hpp  initialization_failed_exception.hpp  light_limit_reached_exception.hpp  shader_compile_exception.hpp  shader_link_exception.hpp  unknown_extension_exception.hpp  unknown_file_type_exception.hpp
include/engine/fonts/: font.cpp  font.hpp  font_loader.cpp  font_loader.hpp  glyph.cpp  glyph.hpp  text.cpp  text.hpp
include/engine/lights/: directional_light.cpp  directional_light.hpp  light.cpp  light.hpp  point_light.cpp  point_light.hpp  spot_light.cpp  spot_light.hpp
include/engine/materials/: basic_material.cpp  basic_material.hpp  image_loader.cpp  image_loader.hpp  material.cpp  material.hpp  texture.cpp  texture.hpp
include/engine/primitives/: box.cpp  box.hpp  mesh.cpp  mesh.hpp  plane.cpp  plane.hpp  rectangle.cpp  rectangle.hpp  (+2 more)
(+309 files in other folders)
