cmake_minimum_required(VERSION 2.8)

find_package(OpenGL REQUIRED)
include_directories(${OPENGL_INCLUDE_DIRS})
link_libraries(${OPENGL_LIBRARIES})

find_package(GLEW REQUIRED)
include_directories(${GLEW_INCLUDE_DIRS})
link_libraries(${GLEW_LIBRARIES})

find_package(Boost COMPONENTS system filesystem REQUIRED)
link_libraries(${Boost_LIBRARIES})

find_path(freeimage_INCLUDE_FreeImage FreeImage.h)
include_directories(${freeimage_INCLUDE_FreeImage})
find_library(freeimage_LIBRARIES freeimage)
link_libraries(${freeimage_LIBRARIES})

find_library(assimp_LIBRARIES assimp)
link_libraries(${assimp_LIBRARIES})

find_package(Freetype REQUIRED)
include_directories(${FREETYPE_INCLUDE_DIRS})
link_libraries(${FREETYPE_LIBRARIES})

file(GLOB_RECURSE SOURCES *.cpp)

add_library(bauasian ${SOURCES})
target_include_directories(bauasian PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

# Copy shader files
configure_file(bauasian/glsl/2d/basic_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/2d/basic_fs.glsl COPYONLY)
configure_file(bauasian/glsl/2d/basic_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/2d/basic_vs.glsl COPYONLY)
configure_file(bauasian/glsl/globals.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/globals.glsl COPYONLY)
configure_file(bauasian/glsl/common/lights.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/common/lights.glsl COPYONLY)
configure_file(bauasian/glsl/common/blinn_phong.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/common/blinn_phong.glsl COPYONLY)
configure_file(bauasian/glsl/common/parallax.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/common/parallax.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/gbuffer_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/gbuffer_fs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/gbuffer_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/gbuffer_vs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/lighting_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/lighting_vs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/directional_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/directional_fs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/point_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/point_fs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/point_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/point_vs.glsl COPYONLY)
configure_file(bauasian/glsl/deferred_rendering/spot_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/deferred_rendering/spot_fs.glsl COPYONLY)
configure_file(bauasian/glsl/fonts/font_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/fonts/font_fs.glsl COPYONLY)
configure_file(bauasian/glsl/fonts/font_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/fonts/font_vs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/basic_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/basic_vs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/kernel_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/kernel_fs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/large_kernel_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/large_kernel_fs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/black_white_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/black_white_fs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/blur_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/blur_fs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/fxaa_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/fxaa_fs.glsl COPYONLY)
configure_file(bauasian/glsl/post_processing/fxaa/Fxaa3_11.h ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/fxaa/Fxaa3_11.h COPYONLY)
configure_file(bauasian/glsl/post_processing/hdr_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/post_processing/hdr_fs.glsl COPYONLY)
configure_file(bauasian/glsl/skybox/basic_vs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/skybox/basic_vs.glsl COPYONLY)
configure_file(bauasian/glsl/skybox/basic_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/skybox/basic_fs.glsl COPYONLY)
configure_file(bauasian/glsl/skybox/sun_fs.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/skybox/sun_fs.glsl COPYONLY)
configure_file(bauasian/glsl/utils/random.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/utils/random.glsl COPYONLY)
configure_file(bauasian/glsl/utils/luminance.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/utils/luminance.glsl COPYONLY)
configure_file(bauasian/glsl/utils/pi.glsl ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/glsl/utils/pi.glsl COPYONLY)
